--- a/app/design/adminhtml/default/default/template/ideal/advanced/pdf/info.phtml
+++ b/app/design/adminhtml/default/default/template/ideal/advanced/pdf/info.phtml
@@ -24,6 +24,6 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php echo $this->getMethod()->getTitle() ?>
+<?php echo $this->escapeHtml($this->getMethod()->getTitle()) ?>
     {{pdf_row_separator}}
 <?php echo Mage::helper('ideal')->__('Ideal: %s', $this->escapeHtml($this->getInfo()->getIdealIssuerTitle())) ?>
