--- a/app/design/adminhtml/default/default/template/flo2cash/info.phtml
+++ b/app/design/adminhtml/default/default/template/flo2cash/info.phtml
@@ -24,7 +24,7 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php echo $this->getMethod()->getTitle() ?><br />
+<?php echo $this->escapeHtml($this->getMethod()->getTitle()) ?><br />
 <?php echo Mage::helper('payment')->__('Name on the Card: %s', $this->escapeHtml($this->getInfo()->getCcOwner())) ?><br/>
 <?php echo Mage::helper('payment')->__('Credit Card Type: %s', $this->escapeHtml($this->getCcTypeName())) ?><br/>
 <?php echo Mage::helper('payment')->__('Credit Card Number: xxxx-%s', $this->escapeHtml($this->getInfo()->getCcLast4())) ?><br/>
