--- a/app/design/frontend/base/default/template/flo2cash/info.phtml
+++ b/app/design/frontend/base/default/template/flo2cash/info.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 <?php if($_info = $this->getInfo()): ?>
-<?php echo $this->getMethod()->getTitle() ?><br />
+<?php echo $this->escapeHtml($this->getMethod()->getTitle()) ?><br />
     <?php echo $this->__('Name on the Card: %s', $this->escapeHtml($this->getInfo()->getCcOwner())) ?><br />
     <?php echo $this->__('Credit Card Type: %s', $this->escapeHtml($this->getCcTypeName())) ?><br />
     <?php echo $this->__('Credit Card Number: xxxx-%s', $this->escapeHtml($this->getInfo()->getCcLast4())) ?>
